--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="description" content="Music Collaboration Platform - Create, collaborate and compose music together with AI-powered assistance">
+    <meta name="keywords" content="music, collaboration, DAW, AI, composition, audio, MIDI">
+    <title>Music Collaboration Platform</title>
   </head>
   <body>
     <div id="app"></div>
